--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
   flex-direction: row;
   align-items: center;
   justify-items: center;
-  border: solid 6px #00BBD6;
+  border: solid 3px black;
   border-radius: 10px;
   width: auto;
   height: auto;
