Solo pendiente Context y Detailview

--- a/src/App.css
+++ b/src/App.css
@@ -114,3 +114,10 @@ i {
   justify-content: center;
   gap: 20px;
 }
+
+.itemlist {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding: 30px 0;
+}
