--- a/src/App.css
+++ b/src/App.css
@@ -121,3 +121,20 @@ i {
   gap: 20px;
   padding: 30px 0;
 }
+
+.imgServicio {
+  height: 200px;
+  width: auto;
+}
+
+.itemCart {
+  display: flex;
+  width: 300px;
+  justify-content: center;
+  justify-self: center;
+  justify-items: center;
+}
+
+.formCheckout {
+  padding-bottom: 30px;
+}
